plang/testing/logs/false-incorrect/176/program176.p.p.out
Error at eH23 (Fb) :- (wr).:12:12 error: 
eH23 (Fb) :- (wr).
           ^
Error at eH23 (Fb) :- (wr).:12:16 error: 
eH23 (Fb) :- (wr).
               ^
Error at ? ((xI zpGGX E), (u nY, eK0 h3X)), jLJK (zNEvf gMP (c70 (aSd) o5w RiP) Pv7Jt) N5Jg S6Y; hy, g9CO (Xd), i (tOi ogZ (rok uNDc2 ht r)), (wb T), wDkDP, twC66 IIZ8 k; kA; a BL (wk8r AVTD).:13:1 error: 
? ((xI zpGGX E), (u nY, eK0 h3X)), jLJK (zNEvf gMP (c70 (aSd) o5w RiP) Pv7Jt) N5Jg S6Y; hy, g9CO (Xd), i (tOi ogZ (rok uNDc2 ht r)), (wb T), wDkDP, twC66 IIZ8 k; kA; a BL (wk8r AVTD).
^